# difunction

./: CHANGELOG.md  LICENSE  Lambda.hs  Precedence.hs  Test.hs  proofed.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Lambda.hs  Main.hs  Parser.hs  Precedence.hs
