cabal-version:      3.0
version:            0.1.0.0

name:               proofed
author:             Mattan Mohel
maintainer:         mattanmohel@gmail.com

license:            MIT
license-file:       LICENSE

category:           Language
build-type:         Simple

executable proofed
    main-is:          Main.hs
    default-language: GHC2021

    build-depends:    base       ^>=4.17.2.1,
                      containers ^>= 0.6.7

    hs-source-dirs:   src
    ghc-options:     -Wall
